# multi-agent-stock-market-analysis-system

./: README.md
GenAIMajor-q2/multi_agent_project/: 2.4.2  README.md  pyproject.toml  report.md
GenAIMajor-q2/multi_agent_project/src/multi_agent_project/: crew.py  main.py  requirements.txt
GenAIMajor-q2/multi_agent_project/src/multi_agent_project/config/: agents.yaml  tasks.yaml
